2013-02-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run inval-rep and x86-64-inval-rep.

	* gas/i386/inval-rep.l: New file.
	* gas/i386/inval-rep.s: Likewise.
	* gas/i386/x86-64-inval-rep.l: Likewise.
	* gas/i386/x86-64-inval-rep.s: Likewise.

2013-02-28  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/crc32.s: New test.
	* gas/aarch64/crc32.d: Ditto.

2013-02-28  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/illegal.l: Delete the error message for
	msr S3_1_C13_C15_1,x7.
	* gas/aarch64/sysreg.s: Add new tests.
	* gas/aarch64/sysreg.d: Update.

2013-02-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/15159
	* gas/i386/i386.exp: Run smap and x86-64-smap.

	* gas/i386/smap.d: New file.
	* gas/i386/smap.s: likewise.
	* gas/i386/x86-64-smap.d: likewise.

2013-02-15  Markos Chandras  <markos.chandras@imgtec.com>

	* gas/metag/labelarithmetic.d: Fix the expected disassembler
	output to be in little endian format
	* gas/metag/metacore12.d: likewise
	* gas/metag/metacore21.d: likewise
	* gas/metag/metacore21ext.d: likewise
	* gas/metag/metadsp21.d: likewise
	* gas/metag/metadsp21ext.d: likewise
	* gas/metag/metafpu.d: likewise
	* gas/metag/metafpuext.d: likewise
	* gas/metag/tls.d: likewise

2013-02-15  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gas/arm/neon-vmov-bad.d: New file.
	* gas/arm/neon-vmov-bad.s: Likewise.
	* gas/arm/neon-vmov-bad.l: Likewise.

2013-02-14  Yufeng Zhang  <yufeng.zhang@arm.com>

	* gas/aarch64/system.s: Add tests.
	* gas/aarch64/system.d: Update.

2013-02-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gas/arm/archv6t2.s: Add strht and ldrht tests.
	* gas/arm/archv6t2.d: Add disassembly patterns for the above.

2013-02-09  Jürgen Urban  <JuergenUrban@gmx.de>

	* gas/mips/24k-triple-stores-2.d, gas/mips/24k-triple-stores-2.s,
	gas/mips/micromips@24k-triple-stores-2.d: Move "sc" tests to...
	* gas/mips/24k-triple-stores-2-llsc.d,
	gas/mips/24k-triple-stores-2-llsc.s,