@@ -1,4 +1,5 @@
 	.text
+	.allow_index_reg
 # All the following should be illegal
 	mov	(%dx),%al
 	mov	(%eax,%esp,2),%al
@@ -57,6 +58,11 @@ foo:	jaw	foo
 
 movnti %ax, (%eax)
 movntiw %ax, (%eax)
+
+	add (%si,%esi), %eax
+	add (%esi,%si), %eax
+	add (%eiz), %eax
+	add (%eax), %eiz
 
 	.intel_syntax noprefix
 	cvtsi2ss xmm1,QWORD PTR [eax]
