@@ -1,3 +1,13 @@
+2013-03-01  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/inval.s: Add tests for invalid addresses and eiz.
+
+	* gas/i386/x86-64-inval.s: Add tests for invalid addresses and
+	riz/eiz.
+
+	* gas/i386/inval.l: Updated.
+	* gas/i386/x86-64-inval.l: Likewise.
+
 2013-02-28  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/i386.exp: Run inval-rep and x86-64-inval-rep.
